# pregel

./: .gitignore  CMakeLists.txt  README.md
example/: .gitignore  .tarantoolctl  common.lua  pregel  test-master.lua  workers.sh
example/pregel/: CMakeLists.txt  loader.lua  master.lua  mpool.lua  queue.lua
example/pregel/avro/: c.lua  constants.lua  init.lua
example/pregel/utils/: checktype.lua  collections.lua  copy.lua
pregel/: aggregator.lua  vertex.lua  worker.lua
pregel/avro/: CMakeLists.txt  legacy.c
pregel/utils/: elog.lua  fiber_pool.lua  init.lua  strict.lua
test-unit/: queue.lua
